modify port for webpack server

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
     <title>PicApp</title>
   </head>
   <body>
+    <p>hosted on heroku</p>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
