fix overflow issue

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,10 @@
         #map {
             position:absolute;
           }
+          html{
+            overflow: hidden;
+            height: 100%;
+          }
     </style>
     <title>PicApp</title>
   </head>
