changed background color as quick fix to header problems

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,9 @@
         #map {
             position:absolute;
           }
+          body{
+            background-color: #222;
+          }
           html{
             overflow: hidden;
             height: 100%;
