--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <style>
         #map {
+            height:70%;
             position:absolute;
           }
           body{
